--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 
 <html>
@@ -22,7 +22,7 @@
             <li><a href='/document/' id='docs-link' title='Docs'>文章</a></li>
             <li><a href='/about.html' id='about-link' title='About'>关于</a></li>
             <li><a href='http://github.com/dongyongzhou' target='_blank' title='GitHub' rel='me' id='github-link'>GitHub</a></li>
-            <li><a href='http://weibo.com/u/1892663980' title='微博' target='_blank' id='weibo-link'>微博</a></li>
+            <li><a href='http://t.qq.com/eastream' title='微博' target='_blank' id='weibo-link'>微博</a></li>
           </ul>
         </div>
       </div>
