--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div id='footer'>
-      Copyright &copy; 2012-2015 Dongyon Zhou. Hosted by <a href='http://github.com/dongyongzhou/dongyongzhou.github.com/' target='_blank'>GitHub</a> and powered by <a href='http://github.com/mojombo/jekyll'>Jekyll</a>. Templates from <a href='http://github.com/mbleigh/mbleigh.github.com/' target='_blank'>Michael Bleigh</a>.
+      Copyright &copy; 2012 Dongyon Zhou. Hosted by <a href='http://github.com/dongyongzhou/dongyongzhou.github.com/' target='_blank'>GitHub</a> and powered by <a href='http://github.com/mojombo/jekyll'>Jekyll</a>. Templates from <a href='http://github.com/mbleigh/mbleigh.github.com/' target='_blank'>Michael Bleigh</a>.
     </div>
 
     <script type="text/javascript">
